--- a/sass/main.sass
+++ b/sass/main.sass
@@ -921,6 +921,10 @@ body
 	& .social--ts_textblock
 		margin-top: 15%
 
+@import "__contacts.sass"
+
+@import "__news.sass"
+
 // FOOTER
 footer
 	background-color: $footer-color
