--- a/sass/main.sass
+++ b/sass/main.sass
@@ -45,9 +45,38 @@ $grey: #f7f7f7
 $number: #000
 $line: #0c5adb
 $red: #f01313
+$lines: #8fadcc
+$broun: #2a2a2a
 // FOOTER 
 $footer-color: #031E40
 
+	
+// NAV MENU
+.navbar
+	border: none
+	margin-top: 15vh
+.navbar-default
+	background-color: transparent
+	border: none
+	position: absolute
+	z-index: 99
+	& .navbar-collapse .navbar-nav
+	
+		& li 
+			& a
+				color: rgba($white, .8)
+				font-size: 16px
+				margin-top: 30px
+				text-transform: uppercase
+				font-weight: bold
+				font-family: 'DIN Pro Medium';
+				letter-spacing: 1px
+				&:hover
+					color: rgba($white, 1)
+
+	& .navbar-brand>img
+		width: 150px
+		margin-top: -10px
 
 .nomargin
 	margin: 0 
@@ -81,848 +110,13 @@ body
 
 
 
-// FIRST SECTION
-.firstSection
-	position: relative
-	overflow: hidden
-	&--content
-		z-index: 999;
-		position: relative;
-		margin-top: 60vh;
-		&_mainText
-			font-family: 'DIN Pro';
-			font-weight: 600;
-			font-size: 46px;
-			text-transform: uppercase;
-			line-height: 1.5
-			padding-bottom: 50px
-
-// FIRST SECTION VIDEO
-#myVideo
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	top: -100px
-	left: 0
-	min-width: 100%; 
-	min-height: 100%;
-
-.firstSection--videoWrapper
-	&:before
-		content: ""
-		z-index: 1
-		position: absolute
-		bottom: 0
-		top: 0
-		left: 0
-		right: 0
-		background-color: rgba($dark, .8)
-
-// NAV MENU
-.navbar
-	border: none
-	margin-top: 15vh
-.navbar-default
-	background-color: transparent
-	border: none
-	position: absolute
-	z-index: 99
-	& .navbar-right
-		margin-right: 100px
-	& .navbar-collapse .navbar-nav
-		& li 
-			& a
-				color: rgba($white, .4)
-				font-size: 13px;
-				margin-top: 30px;
-				text-transform: uppercase
-				font-weight: bold
-				font-family: 'DIN Pro Medium';
-				letter-spacing: 1px
-				&:hover
-					color: rgba($white, 1)
-
-	& .navbar-brand>img
-		width: 150px
-		margin-top: -10px
-
-
-
-// 1.1 First Section end
-
-// 2.1 Second Section
-
-.secondSection
-	background-color: $grey
-	color: $dark
-	display: -webkit-flex
-	display: -moz-flex
-	display: -ms-flex
-	display: -o-flex
-	display: flex
-	align-items: center
-	padding: 150px 0
-	&--content
-		position: relative
-		&_mainText
-			font-family: 'DIN Pro';
-			font-weight: 600;
-			font-size: 46px
-			text-transform: uppercase
-    		line-height: 1.5;
-			color: #2a2a2a
-		& p:nth-child(1)
-			margin-bottom: 20px
-		& p:nth-child(2),& p:nth-child(3), & p:nth-child(4), & p:nth-child(5)
-			font-weight: 100
-			margin-bottom: 20px
-		&_verticalLine
-			position: absolute
-			left: -100px
-			top: 0
-			height: 100%
-			width: 2px
-			background-color: #fff
-
-// 2.1 Second Section end
-
-
-// 3.1 third Section
-
-.thirdSection
-	background-image: url(../img/ts-bg.jpg)
-	background-size: contain
-	background-position: 50%
-	background-repeat: no-repeat
-	position: relative
-	padding: 150px 0
-	margin: 50px 0
-	&:after
-		content: ""
-		display: block
-		position: absolute
-		bottom: -100px
-		left: 25%
-		height: 2px
-		width: 50%
-		background-color: $grey
-	&--content
-		display: -webkit-flex
-		display: -moz-flex
-		display: -ms-flex
-		display: -o-flex
-		display: flex
-		justify-content: center
-		flex-direction: column
-		align-items: center
-		position: relative
-
-		&_header
-			font-family: 'DIN Pro'
-			font-weight: 700
-			font-size: 62px
-			text-transform: uppercase
-			color: $dark
-			text-align: center
-		& .underHeader
-			font-family: 'DIN Pro'
-			font-weight: 700
-			font-size: 62px
-			text-transform: uppercase
-			color: #f01313
-			text-align: center
-
-
-.section--underline	
-	height: 2px
-	width: 100%
-	background-color: $grey
-// 3.1 third Section end
-
-
-
-// 4.1 Fourth Section
-.fourthSection
-	color: $black
-	position: relative
-	&:after
-		content: ""
-		display: block
-		position: absolute
-		bottom:  0
-		left: 25%
-		height: 2px
-		width: 50%
-		background-color: $grey
-	&--content
-		margin-top: 20vh
-		&_header
-			color: $dark
-			font-family: 'DIN Pro'
-			font-weight: 700
-			line-height: 1
-			font-size: 62px
-			text-transform: uppercase
-			text-align: center
-
-
-// SLIDER
-.carousel
-	& .slider--item
-		&_count
-			font-family: 'DIN Pro Cond'
-			font-weight: bold
-			font-size: 100px
-			position: relative
-			z-index: 999 !important
-			color: $number
-			&:after
-				content: ''
-				position: absolute
-				top: 55%
-				left: 5px
-				z-index: -999 !important
-				height: 5px
-				width: 200px
-				background-color: $line
-				display: block
-		&_text
-			padding-left: 120px
-			margin-top: -40px
-			font-size: 22px
-			// width: 300px
-			line-height: 1em
-			white-space: pre-line
-			line-height: 27px
-	& .slider--controls
-		width: 200px
-		margin: 50px auto
-		display: -webkit-flex
-		display: -moz-flex
-		display: -ms-flex
-		display: -o-flex
-		display: flex
-		justify-content: space-around
-		margin-bottom: 50px
-		& svg
-			fill: $grey
-			cursor: pointer
-			width: 50px
-			height: auto
-			&:hover
-				fill: $line
-// SLIDER end
-
-// 4.1 Fourth Section end
-
-// FIFTH SECTION
-
-.fifthSection
-	display: -webkit-flex
-	display: -moz-flex
-	display: -ms-flex
-	display: -o-flex
-	display: flex
-	align-items: center
-	color: $dark
-	&--content
-		margin: 15vh auto 15vh auto
-		&_header
-			color: $dark
-			font-family: 'DIN Pro'
-			font-weight: 700
-			line-height: 1
-			font-size: 62px
-			text-transform: uppercase
-			text-align: center
-			padding-bottom: 50px
-	
-		& .icon-table
-			&--row
-				border-bottom: 1px solid $grey
-				border-top: 1px solid $grey
-				&_item
-					margin: 3px 0
-					&:nth-child(2)
-						border-left: 1px solid $grey
-						border-right: 1px solid $grey
-
-
-.hovertry
-	-webkit-filter: grayscale(100%);
-	filter: grayscale(100%);
-	cursor: pointer
-	transition: all 1s ease
-	margin: auto
-	width: 300px
-	display: block
-
-.hovertry:hover
-	filter: none;
-	-webkit-filter: grayscale(0%);
-	transform: scale(1.3)
-// FIFTH SECTION END
-
-.tac
-	text-align: center
-
-.sixthSection
-	color: $dark
-	background-image: url('../img/tinyBg.jpg')
-	background-position: center
-	background-size: cover
-	padding: 30px 0
-	margin-top: 100px
-	&--wrapper
-		&_firstLine
-			padding: 80px 0
-			border-bottom: 1px solid #818181
-			& .tenM
-				font-size: 100px
-				font-family: 'DIN Pro Cond'
-				font-weight: bold
-				position: relative
-				display: block
-				color: #0c5adb
-				text-align: left
-				padding-left: 90px
-				&:after
-					content: ""
-					height: 80px
-					width: 1px
-					background-color: #818181
-					display: block
-					position: absolute
-					right: 0
-					top: 35%
-				& span.plus
-					font-weight: 100
-					font-size: 120px
-					line-height: 2
-					padding-left: 10px
-					
-			& .firstLine--comment
-				font-family: 'Fira Sans', sans-serif
-				font-size: 30px
-				padding-top: 75px
-				padding-left: 60px
-				line-height: 1
-					
-		&_secondLine
-			padding: 80px 0
-			& .leftinfopart, .rightinfopart
-				padding-left: 90px
-				&--mainnumber
-					font-size: 100px
-					font-family: 'DIN Pro Cond'
-					font-weight: bold
-					position: relative
-					display: block
-					color: #0c5adb
-					margin: 0
-					text-align: left
-					&:after
-						content: "рокiв"
-						height: 80px
-						font-size: 20px
-						display: block
-						position: absolute
-						right: 30%
-						top: 25%
-						font-weight: 500
-						color: $black
-					& span.plus
-						font-weight: 100
-						font-size: 120px
-						line-height: 1
-						padding-left: 10px
-				&--undertext
-					font-family: 'Fira Sans', sans-serif
-					font-size: 30px
-					margin-top: -20px
-					line-height: 1
-					text-align: left
-
-			& .rightinfopart--mainnumber:after
-				content: ""
-// Career section
-
-.career-fs
-	position: relative
-	&:before
-		content: ""
-		background-image: url('../img/careerBG.jpg')
-		background-position: center
-		background-size: cover
-		position: absolute
-		z-index: 5
-		top: 0
-		bottom: 0
-		left: 0
-		right: 0
-	&:after
-		content: ""
-		background-color: rgba($dark, .8)
-		position: absolute
-		z-index: 6
-		top: 0
-		bottom: 0
-		left: 0
-		right: 0
-	& .firstSection--content
-		margin-top: 50vh
-
-
-// Career section end
-.career--ts
-	color: $dark
-	overflow: hidden
-	&_form
-		padding: 10% 0
-		& .form-group
-			margin-top: 40px
-			& label
-				font-weight: 100
-		& .btn
-			margin-top: 10px
-
-//INVESTORS PAGE
-	// investors-fs
-
-.investors-fs
-	position: relative
-	&:before
-		
-		content: ""
-		z-index: 6
-		position: absolute
-		bottom: 0
-		top: 0
-		left: 0
-		right: 0
-		background-color: rgba($dark, .9)
-	&:after
-		content: ""
-		background-image: url('../img/investorsBG.jpg')
-		background-position: center
-		background-size: cover
-		position: absolute
-		z-index: 5
-		top: 0
-		bottom: 0
-		left: 0
-		right: 0
-	& .firstSection--content
-		margin-top: 50vh
-		&_mainText
-			padding-bottom: 50px
-
-.investors--ts
-	&_textblock
-		padding: 15% 0
-		color: $dark
-		& p
-			padding: 2% 0
-		& .btn
-			margin-top: 20px
-// HISTORY / ABOUT US PAGE
-	// FIRST SCREEN
-.history-fs
-	position: relative
-	&:before
-		content: ""
-		background-image: url('../img/historyBG.jpg')
-		filter: grayscale(100%)
-		background-position: center
-		background-size: cover
-		position: absolute
-		z-index: 5
-		top: 0
-		bottom: 0
-		left: 0
-		right: 0
-	&:after
-		content: ""
-		background-color: rgba($dark, .8)
-		position: absolute
-		z-index: 6
-		top: 0
-		bottom: 0
-		left: 0
-		right: 0
-	& .firstSection--content_mainText
-		padding-bottom: 50px
-
-.thirdSection--history
-	& .slider--header
-		font-family: 'DIN Pro';
-		font-weight: 600;
-		font-size: 46px;
-		text-transform: uppercase;
-		line-height: 1.5;
-		color: $dark
-		text-align: center
-		padding: 50px 0
-	& .item
-		background-color: red
-		height: 300px
-		width: 533px
-		overflow: hidden
-		cursor: pointer
-		&:hover>.itempoint
-			width: 1000px
-			height: 1200px
-			top: 0
-			left: 0
-			border-radius: 0
-			background-color: rgba(#ec2808, .8)
-		& .itempoint
-			transition: all .5s ease
-			position: absolute
-			width: 200px
-			height: 200px
-			background-color: #ec2808
-			border-radius: 100%
-			display: block
-			z-index: 9
-			top: 12% 
-			left: 31% 
-
-		& .itembg
-			position: relative
-			z-index: 2
-			& img
-				position: absolute
-				height: 300px
-				width: 533px
-		&:before
-			content: ""
-			background-color: rgba($dark, .7)
-			position: absolute
-			z-index: 6
-			top: 0
-			bottom: 0
-			left: 0
-			right: 0
-		& .itemheader
-			position: relative
-			z-index: 10
-			padding-top: 100px
-			font-family: 'Fira Sans', sans-serif
-			text-transform: uppercase
-			font-weight: bold
-			& p
-				font-size: 40px
-				text-align: center
-		& .itemtext
-			position: relative
-			z-index: 10
-			width: 80%
-			margin: auto
-			text-align: center
-
-	& .carousel .slider--controls
-		width: 100%
-	& .slider--controls svg
-		fill: rgba(grey, .5)
-		width: 30px
-		&:hover
-			fill:  #ec2808
-	& .carousel-indicators
-		bottom: 50px
-		& .left, .right
-			width: 30px
-    		margin: auto
-    		display: block
-		& .active
-			background-color: #ec2808
-		& li
-			background-color: rgba(grey, .5)
-
-	.slider--buttons
-		display: flex
-		flex-direction: row
-		width: 300px
-		justify-content: center
-		align-items: center
-		&_prev
-			flex-grow: 1
-			& svg
-				width: 30px
-
-				
-		&_indicators
-			flex-grow: 3
-			& .carousel-indicators
-				position: relative
-				bottom: inherit
-				margin-left: 0
-				width: inherit
-				left: inherit
-		&_next
-			flex-grow: 1
-			& svg
-				width: 30px
-			
-	// NAGL RADA PAGE
-.nagl-rada
-	padding: 100px 0
-	&--header
-		font-family: 'DIN Pro';
-		font-weight: 600;
-		font-size: 46px;
-		text-transform: uppercase;
-		line-height: 1.5;
-		color: #2a2a2a
-		text-align: center
-		padding: 50px 0
-	&--wrapper
-		&_box
-			& .name
-				font-size: 20px
-				font-weight: 100
-				font-family: 'DIN Pro'
-				color: $black
-				padding: 10px 0
-			& .role
-				color: $black
-				line-height: 1
-				font-weight: 500
-
-	// HISTORYTREE
-.historytree
-	&--header
-		font-family: 'DIN Pro';
-		font-weight: 600;
-		font-size: 46px;
-		text-transform: uppercase;
-		line-height: 1.5;
-		color: #2a2a2a
-		text-align: center
-		padding: 50px 0
-
-	$lines: #8fadcc
-	
-	&--wrapper
-		&_item
-			z-index: 1
-			position: relative
-		.line-h
-			margin: 0
-			padding: 0
-			height: 3px
-			background-color: #8DADCE
-			margin-top: 100px
-		
-		.lastpoint
-			margin: 0
-			padding: 0
-			& p
-				width: 100%
-				height: 280px
-				background-color: #ec2808
-				border-radius: 100%
-				display: flex
-				justify-content: center
-				align-items: center
-				font-family: 'DIN Pro';
-				font-weight: 600;
-				font-size: 90px
-				margin-top: -35px
-		.y2017
-			margin: 0
-			padding: 0
-			margin-top: -100px
-			margin-left: -30px
-			position: relative
-			z-index: 1
-			&:before
-				z-index: -1
-				content: ""
-				display: block
-				position: absolute
-				width: 50%
-				height: 2px
-				bottom: 20%
-				left: -200px
-				background-color: #8DADCE
-			&:after
-				content: ""
-				background-image: url('../img/arrow.png')
-				background-size: contain
-				background-repeat: no-repeat
-				display: block
-				width: 30px
-				height: 30px
-				position: absolute
-				left: -100px
-				bottom: 25%
-				transform: rotate(180deg)
-		
-		.y2017-2
-			position: relative
-			margin-right: -50px
-			&:before
-				z-index: -1
-				content: ""
-				display: block
-				position: absolute
-				width: 3px
-				height: 50%
-				top: -22%
-				left: 257px
-				background-color: #8DADCE
-			&:after
-				content: ""
-				background-image: url('../img/arrow.png')
-				background-size: contain
-				background-repeat: no-repeat
-				display: block
-				width: 30px
-				height: 30px
-				position: absolute
-				top: -10%
-				left: 200px
-				transform: rotate(90deg)
-		.y2016
-			margin: 0
-			padding: 0
-			margin-left: -50px		
-			&:after
-				content: ""
-				background-image: url('../img/arrow.png')
-				background-size: contain
-				background-repeat: no-repeat
-				display: block
-				width: 30px
-				height: 30px
-				position: absolute
-				bottom: 20%
-				left: -100px
-				transform: rotate(180deg)
-			&:before
-				z-index: -1
-				content: ""
-				display: block
-				position: absolute
-				width: 100%
-				height: 2px
-				bottom: 15%
-				left: -200px
-				background-color: #8DADCE
-		.y2015
-			margin: 0
-			padding: 0
-			margin-top: -200px				
-			&:after
-				content: ""
-				background-image: url('../img/arrow.png')
-				background-size: contain
-				background-repeat: no-repeat
-				display: block
-				width: 30px
-				height: 30px
-				position: absolute
-				right: 0
-			&:before
-				z-index: -1
-				content: ""
-				display: block
-				position: absolute
-				width: 3px
-				height: 50%
-				bottom: -50px
-				left: 257px
-				background-color: #8DADCE
-		.y2014
-			padding-top: 100px
-			&:before
-				z-index: -1
-				content: ""
-				display: block
-				position: absolute
-				width: 100%
-				height: 3px
-				bottom: 228px
-				left: -328px
-				background-color: #8DADCE
-		.showNextTimelapse
-			border: 2px solid #8DADCE
-			margin-top: -100px
-			position: relative
-			z-index: 2
-			cursor: pointer
-			background-color: #fff
-			&:before
-				z-index: -1
-				content: ""
-				display: block
-				position: absolute
-				width: 238px
-				height: 3px
-				bottom: 20px
-				right: -238px
-				background-color: #8DADCE
-
-#consist
-	background-color: #F8F8F8
-	
-// SOCIAL PAGE
-	// FIRST SCREEN
-.social-fs
-	position: relative
-	&:before
-		content: ""
-		background-image: url('../img/socialBG.jpg')
-		filter: grayscale(100%)
-		background-position: center
-		background-size: cover
-		position: absolute
-		z-index: 5
-		top: 0
-		bottom: 0
-		left: 0
-		right: 0
-	&:after
-		content: ""
-		background-color: rgba(#636363, .5)
-		position: absolute
-		z-index: 6
-		top: 0
-		bottom: 0
-		left: 0
-		right: 0
-	& .firstSection--content
-		margin-top: 50vh
-	
-	// WALLPAPER SCREEN
-.wallpaper
-	text-align: center
-	color: $black
-	background-image: url('../img/socialWallpaper.jpg')
-	background-position: center
-	background-size: cover
-	&--wrapper
-		padding: 20% 0
-		&_header
-			@extend .secondSection--content_mainText
-			margin-top: -10%;
-		&_body
-			margin-top: 8%
-
-.social--r, .social--l
-	color: $dark
-	& .social--ts_textblock
-		margin-top: 7%
-		color: $black
-		& p
-			margin-bottom: 5%
-.social--r
-	& .social--ts_textblock
-		margin-top: 15%
-
+// MY CUSTOM STYLES
+@import "__index.sass"
+@import "__career.sass"
+@import "__investors.sass"
+@import "__history.sass"
+@import "__social.sass"
 @import "__contacts.sass"
-
 @import "__news.sass"
 
 // FOOTER
@@ -939,6 +133,28 @@ footer
 		color: #fff
 		font-size: 10px
 		text-align: center
+
+.standart--header
+	font-family: 'DIN Pro'
+	font-size: 80px
+	font-weight: bold
+	white-space: nowrap
+	text-transform: uppercase
+	line-height: 1
+
+.standat--textcolor
+	color: #2a2a2a !important
+	font-size: 33px
+	line-height: 1.5
+.fz15
+	font-size: 15px
+.fz18
+	font-size: 18px
+	line-height: 2
+.fira--sans
+	font-family: 'Fira Sans', sans-serif !important
+	font-weight: 300 !important
+	
 
 
 @import "media" // Всегда в конце
