Do other pages and some Jenia fixes

--- a/sass/__history.sass
+++ b/sass/__history.sass
@@ -22,8 +22,10 @@
 		bottom: 0
 		left: 0
 		right: 0
-	& .firstSection--content_mainText
-		padding-bottom: 50px
+	& .firstSection--content
+		margin-top: 40vh
+		&_mainText
+			padding-bottom: 50px
 
 .thirdSection--history
 	& .slider--header
