--- a/sass/__investors.sass
+++ b/sass/__investors.sass
@@ -9,7 +9,7 @@
 		top: 0
 		left: 0
 		right: 0
-		background-color: rgba($dark, .9)
+		background-color: rgba($black, .8)
 	&:after
 		content: ""
 		background-image: url('../img/investorsBG.jpg')
@@ -22,7 +22,7 @@
 		left: 0
 		right: 0
 	& .firstSection--content
-		margin-top: 50vh
+		margin-top: 40vh
 		&_mainText
 			padding-bottom: 50px
 
