--- a/sass/__social.sass
+++ b/sass/__social.sass
@@ -25,7 +25,7 @@
 		left: 0
 		right: 0
 	& .firstSection--content
-		margin-top: 30vh
+		margin-top: 50vh
 		&_mainText
 			margin-bottom: 0
 	
@@ -33,9 +33,11 @@
 .wallpaper
 	text-align: center
 	color: $black
-	background-image: url('../img/socialWallpaper.jpg')
-	background-position: center
+	background-image: url('../img/socialWallpaper2.jpg')
+	background-position: 0 80%
 	background-size: cover
+	background-repeat: no-repeat
+	padding: 100px 0
 	&--wrapper
 		padding: 10% 0 20% 0
 		&_body
@@ -58,3 +60,11 @@
 	padding: 50px 0
 
 .only-img
+	height: 80vh
+	text-align: center
+	color: $black
+	background-image: url('../img/socialBotBg2.png')
+	background-position: 0 -20%
+	background-size: cover
+	background-repeat: no-repeat
+	padding: 100px 0
