--- a/sass/__contacts.sass
+++ b/sass/__contacts.sass
@@ -1,3 +1,6 @@
+#contacts-bg
+    margin-top: 45vh
+    
 .contacts-fs
 	background-image: url('../img/contactsbg.jpg')
 	background-position: center
@@ -11,6 +14,7 @@
 		bottom: 0
 		left: 0
 		right: 0
+        
 
 .contacts
     .maps
