--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,5 +1,6 @@
 @import "libs"
 @import  "../fonts/DINPro/stylesheet.css"
+@import "vars"
 
 *
 	-webkit-box-sizing: border-box
@@ -36,19 +37,7 @@ body textarea:required:valid
 	color: #666
 
 
-// CUSTOM VARS
 
-$white: #fff
-$dark: #01213D
-$black: #000
-$grey: #f7f7f7
-$number: #000
-$line: #0c5adb
-$red: #f01313
-$lines: #8fadcc
-$broun: #2a2a2a
-// FOOTER 
-$footer-color: #031E40
 
 	
 // NAV MENU
@@ -64,11 +53,11 @@ $footer-color: #031E40
 	
 		& li 
 			& a
-				color: rgba($white, .8)
+				color: rgba($white, .5)
 				font-size: 16px
 				margin-top: 30px
 				text-transform: uppercase
-				font-weight: bold
+				font-weight: 500
 				font-family: 'DIN Pro Medium';
 				letter-spacing: 1px
 				&:hover
@@ -120,30 +109,36 @@ body
 @import "__news.sass"
 
 // FOOTER
-footer
+.footer
 	background-color: $footer-color
 	padding: 20px 0
-	& .footer--img
-		padding: 60px 0 40px 0
-		& img
-			width: 100px
-			display: block
-			margin: auto
-	& .copyright
-		color: #fff
-		font-size: 10px
-		text-align: center
+	&-nav
+		display: flex
+		flex-direction: row
+		justify-content: space-around
+		& li
+			list-style-type: none
+			&:hover>a
+				color: $white
+			& a
+				text-decoration: none
+	&-img
+		width: 150px
+		display: block
+		margin: auto
+		padding: 50px 0
+
 
 .standart--header
 	font-family: 'DIN Pro'
-	font-size: 80px
+	font-size: 50px
 	font-weight: bold
 	white-space: nowrap
 	text-transform: uppercase
-	line-height: 1
+	line-height: 1.3
 
 .standat--textcolor
-	color: #2a2a2a !important
+	color: $black
 	font-size: 33px
 	line-height: 1.5
 .fz15
