--- a/sass/__news.sass
+++ b/sass/__news.sass
@@ -1,7 +1,7 @@
 #history-bg
     margin-top: 50vh
 .news-fs
-	background-image: url('../img/mediabg.jpg')
+	background-image: url('../img/mediabg.png')
 	background-position: center
 	background-size: cover
 	& .navbar-default .navbar-collapse .navbar-nav li a
@@ -26,18 +26,19 @@
 
 .box
     border: 1px solid $grey
-    color: $dark
+    color: $black
     font-family: 'DIN Pro'
     margin: 20px 0
     border: 1px solid transparent
     cursor: pointer
     &:hover
-        border: 1px solid $dark
+        
     & p
-        font-size: 15px
+        font-size: 24px
         
     &--header
-        text-align: center
+        color: $black
         font-weight: 700
-        font-size: 18px
+        font-size: 24px
+
     
