--- a/sass/__index.sass
+++ b/sass/__index.sass
@@ -34,7 +34,7 @@
 		top: 0
 		left: 0
 		right: 0
-		background-color: rgba($dark, .7)
+		background-color: rgba($dark, .9)
 
 
 
@@ -85,13 +85,13 @@
 	background-position: 50%
 	background-repeat: no-repeat
 	position: relative
-	padding: 250px 0
+	padding: 350px 0
 	margin: 50px 0
 	&:after
 		content: ""
 		display: block
 		position: absolute
-		bottom: -100px
+		bottom: -80px
 		left: 25%
 		height: 2px
 		width: 50%
@@ -137,7 +137,7 @@
 		width: 50%
 		background-color: $grey
 	&--content
-		margin-top: 20vh
+		margin-top: 10vh
 		&_header
 			color: $black
 			margin-bottom: 50px
@@ -166,7 +166,7 @@
 				display: block
 		&_text
 			font-family: 'Fira Sans', sans-serif !important
-			font-weight: 200 !important
+			font-weight: 300 !important
 			font-size: 33px
 			line-height: 1.3
 			padding-left: 120px
@@ -204,7 +204,7 @@
 	display: flex
 	align-items: center
 	&--content
-		margin: 15vh auto 15vh auto
+		margin: 10vh auto 15vh auto
 		&_header
 			color: $black
 			text-align: center
@@ -227,7 +227,7 @@
 	cursor: pointer
 	transition: all 1s ease
 	margin: auto
-	width: 300px
+	width: 350px
 	display: block
 
 .hovertry:hover
@@ -251,7 +251,7 @@
 			padding: 80px 0
 			border-bottom: 1px solid #818181
 			& .tenM
-				font-size: 100px
+				font-size: 170px
 				font-family: 'DIN Pro Cond'
 				font-weight: bold
 				position: relative
@@ -301,9 +301,10 @@
 						font-size: 30px
 						display: block
 						position: absolute
-						right: 30%
+						right: 20%
 						top: 20%
 						font-weight: 500
+						font-family: 'Fira Sans', sans-serif !important
 						color: $black
 					& span.plus
 						font-weight: 100
