--- a/sass/_libs.sass
+++ b/sass/_libs.sass
@@ -1,3 +1,5 @@
 @import "../libs/bootstrap-grid/bootstrap.css" // Теперь необходимо казывать расширение .css
 @import "../libs/font-awesome-4.7.0/css/font-awesome.min.css" // Теперь необходимо казывать расширение .css
 @import "../libs/aos/dist/aos.css" // Теперь необходимо казывать расширение .css
+@import "../libs/owl/assets/owl.carousel.min.css" // Теперь необходимо казывать расширение .css
+@import "../libs/owl/assets/owl.theme.default.min.css" // Теперь необходимо казывать расширение .css
