--- a/sass/__career.sass
+++ b/sass/__career.sass
@@ -22,17 +22,24 @@
 		left: 0
 		right: 0
 	& .firstSection--content
-		margin-top: 50vh
+		margin-top: 45vh
 
 // Career section end
 .career--ts
 	color: $dark
 	overflow: hidden
+	margin: 50px 0
 	&_form
 		padding: 10% 0
 		& .form-group
 			margin-top: 40px
 			& label
 				font-weight: 100
+			& input
+				font-size: 30px
+				padding: 5px 0
+				height: 60px
+				text-indent: 20px
+				color: $dark
 		& .btn
 			margin-top: 10px
