--- a/sass/main.sass
+++ b/sass/main.sass
@@ -146,6 +146,8 @@ body
 .fz18
 	font-size: 18px
 	line-height: 2
+.black
+	color: $black
 .fira--sans
 	font-family: 'Fira Sans', sans-serif !important
 	font-weight: 300 !important
