--- a/sass/__index.sass
+++ b/sass/__index.sass
@@ -10,7 +10,7 @@
 		&_mainText
 			font-family: 'DIN Pro'
 			font-weight: 600
-			font-size: 52px
+			font-size: 48px
 			text-transform: uppercase
 			line-height: 1.5
 			padding-bottom: 50px
@@ -20,7 +20,7 @@
 	position: absolute
 	right: 0
 	bottom: 0
-	top: -100px
+	top: 0
 	left: 0
 	min-width: 100%
 	min-height: 100%
