some fixes before we met

--- a/sass/__social.sass
+++ b/sass/__social.sass
@@ -49,6 +49,11 @@
 		color: $black
 		& p
 			margin-bottom: 5%
+		& .link
+			text-decoration: none
+			cursor: pointer
+			&:hover
+				color: $dark
 .social--r
 	& .social--ts_textblock
 		margin-top: 5%
