--- a/sass/__history.sass
+++ b/sass/__history.sass
@@ -18,7 +18,7 @@
 			padding-bottom: 50px
 
 .thirdSection--history
-	margin: 100px 0
+	margin: 50px 0
 	&_content
 		margin-top: 50px
 		& .owl-carousel
@@ -100,9 +100,9 @@
 	// HISTORYTREE
 .historytree
 	&--header
-		color: $white
+		color: $black
 		text-align: center
-		padding: 50px 0
+		padding: 150px 0
 	&--wrapper
 		&_item
 			z-index: 1
