--- a/sass/__index.sass
+++ b/sass/__index.sass
@@ -51,7 +51,7 @@
 	display: -o-flex
 	display: flex
 	align-items: center
-	padding: 150px 0
+	padding: 150px 0 50px
 	&--content
 		position: relative
 		&_mainText
